test/fail/actor-reference-hex.mo
// actor references

let _ = actor "ic:ABCDEFGH";  // not hex
